# hydrahive2.0

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  DEADJOE  LICENSE  README.md  SPEC.md  dev-start.sh  tk_ega_to_fhir.py  tmp_google_books_update.py
core/: pyproject.toml
core/src/hydrahive/: code_graph.py  code_graph_config.py  code_graph_cycles.py  code_graph_report.py  fhir_ega.py  handover.py  media_assets.py  media_export.py  media_exports.py  media_projects.py  media_prompts.py  media_timeline_assembly.py  media_workspace.py
core/src/hydrahive/agentlink/: __init__.py  _ws_listener.py  _ws_state.py  client.py  handoff_receiver.py  protocol.py
core/src/hydrahive/agents/: __init__.py  _config_utils.py  _context_injection.py  _defaults.py  _paths.py  _prompt.py  _startup_template.md  _tool_config.py  _validation.py  _workspace_links.py  bootstrap.py  config.py  external_instances.py
core/src/hydrahive/api/: _session_broadcast.py  lifespan.py  main.py  version.py
core/src/hydrahive/backup/: _limits.py  _paths.py  archive.py  restore.py  user_archive.py  user_restore.py  validate.py
core/src/hydrahive/buddy/: __init__.py  _characters.py  _commands_helpers.py  _config.py  commands.py
core/src/hydrahive/butler/: __init__.py  dispatch.py  executor.py  models.py  persistence.py  scheduler.py  template.py
core/src/hydrahive/cards/: __init__.py  _consolidate_prompts.py  consolidate.py
core/src/hydrahive/communication/: __init__.py  _agent_glue.py  _session_lookup.py  base.py  registry.py  router.py
core/src/hydrahive/compaction/: __init__.py  _chunking.py  _prompts.py  _storage.py  compactor.py  cut_point.py  hooks.py  redact.py  serialize.py  summarize.py  tokens.py
core/src/hydrahive/compute/: __init__.py  _identity_store.py  _job_cancel.py  _job_codec.py  _job_events.py  _job_leases.py  _job_lifecycle.py  audit.py  (+14 more)
core/tests/: conftest.py  test_agent_activity.py  test_agent_activity_hooks.py  test_agent_activity_route.py  test_agent_external_field.py  test_agent_reasoning_default.py  test_agent_secret_redaction.py  test_agent_tool_config.py  test_agentlink_handoff_security.py  test_agentlink_response_spoofing.py  test_agents_api.py  test_akte_api.py  test_akte_entities.py  test_akte_import.py  test_akte_patients.py  test_akte_schema.py  test_akte_schema_endpoint.py  test_akte_views.py  test_analytics_api.py  test_analyze_image.py  test_anthropic_kwargs_builder.py  test_anthropic_oauth_headers.py  test_anthropic_payload_dedup.py  test_api_integration.py  test_api_keys_verify.py  test_audit_leaked_secrets.py  test_auth.py  test_backup_auth.py  test_backup_paths_workspaces.py  test_backup_restore_config_perms.py  test_backup_restore_symlink.py  test_buddy_cockpit_backend.py  test_buddy_set_model_live.py  test_buddy_smoke.py  test_butler_cron_scheduler.py  test_butler_no_webhook_secret.py  test_butler_prefix_system.py  test_butler_smoke.py  test_butler_webhook_tenant.py  test_cache_breakpoint_ttl.py  (+227 more)
node-agent/: README.md  pyproject.toml
node-agent/scripts/: install.sh  setup.sh
node-agent/src/hydrahive_node/: __init__.py  _incus_process.py  _incus_state.py  _incus_validation.py  _incus_vm.py  capabilities.py  cli.py  enrollment.py  incus.py  job_runtime.py  job_state.py  jobs.py  runtime.py  storage.py  update_manifest.py
node-agent/systemd/: hydrahive-node.service
node-agent/tests/: test_cli.py  test_enrollment.py  test_incus.py  test_incus_network.py  test_incus_vm.py  test_jobs.py  test_runtime.py  test_update_manifest.py
(+1929 files in other folders)
