[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hydrahive-core"
version = "2.0.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "pyjwt>=2.8",
    "bcrypt>=4.0",
    "cryptography>=41.0",
    "litellm>=1.40",
    "anthropic>=0.40",
    "mcp>=1.0",
    "httpx>=0.27",
    "playwright>=1.44",
    "yt-dlp>=2024.1",
    "python-multipart>=0.0.9",
    "pyyaml>=6.0",
    "websockets>=13",
    "discord.py>=2.3",
    "asyncpg>=0.29",
    "pytest>=9.0",
]

[project.scripts]
hydrahive = "hydrahive.api.main:app"

[tool.hatch.build.targets.wheel]
packages = ["src/hydrahive"]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
# Pyflakes-Regeln: echte Bugs (undefined names, unused vars, doppelte Defs).
# F401 (unused import) ist deaktiviert — Facade-Module re-exportieren bewusst.
select = ["F"]
ignore = ["F401"]
