[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hydrahive-core"
version = "2.0.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "pyjwt>=2.8",
    "bcrypt>=4.0",
    "cryptography>=41.0",
    "litellm>=1.40",
    "anthropic>=0.105",
    "mcp>=1.0",
    "httpx>=0.27",
    "Pillow>=10.0",
    "playwright>=1.44",
    "yt-dlp>=2024.1",
    "python-multipart>=0.0.9",
    "pyyaml>=6.0",
    "websockets>=13",
    "croniter>=2.0",
    "discord.py>=2.3",
    "matrix-nio>=0.25,<0.26",
    "asyncpg>=0.29",
    "pytest>=9.0",
    "pytest-asyncio>=1.4",
]

[tool.pytest.ini_options]
# asyncio_mode=auto: `async def test_*` laufen ohne expliziten Marker (die
# vorhandenen @pytest.mark.asyncio bleiben gültig). Ohne pytest-asyncio wurden
# alle async-Tests (TTS/wyoming/generate_music) als Fehler übersprungen.
asyncio_mode = "auto"

[project.scripts]
hydrahive = "hydrahive.api.main:run"

[tool.hatch.build.targets.wheel]
packages = ["src/hydrahive"]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
# Pyflakes-Regeln: echte Bugs (undefined names, unused vars, doppelte Defs).
# F401 (unused import) ist deaktiviert — Facade-Module re-exportieren bewusst.
select = ["F"]
ignore = ["F401"]
