[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hydrahive-node-agent"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "cryptography>=41.0",
    "httpx>=0.27",
    "websockets>=13",
]

[project.scripts]
hydrahive-node = "hydrahive_node.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/hydrahive_node"]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["F"]
